vi-based pane navigation

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,3 +21,9 @@ set -g status-justify centre
 set-option -g update-environment "PATH LESS GEM_PATH GEM_HOME DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 bind-key C-r respawn-pane
+
+# vim splits style movement
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
