--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,4 @@
+set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g default-terminal "screen-256color"
 #set-option -g default-terminal "xterm-256color" #Will setting this cause things to stop refreshing properly? -- Yes
 set -g lock-after-time 1800
