--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,10 @@
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 set-option -g default-terminal "screen-256color"
 #set-option -g default-terminal "xterm-256color" #Will setting this cause things to stop refreshing properly? -- Yes
+set-option -g default-command $SHELL
 set -g lock-after-time 1800
-set-option -g history-limit 10000
-set -g set-remain-on-exit on
+set-option -g history-limit 100000
+# set -g set-remain-on-exit on
 
 # vi-style controls for copy mode
 setw -g mode-keys vi
