Restoring old tmux "current working directory" behavior.

--- a/tmux.conf
+++ b/tmux.conf
@@ -27,3 +27,8 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# Restore sane concept of "current working directory"
+bind-key 'c' new-window -c '#{pane_current_path}'
+bind-key '"' split-window -c '#{pane_current_path}'
+bind-key '%' split-window -h -c '#{pane_current_path}'
