Adding go support

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 set-option -g default-terminal "screen-256color"
 set -g lock-after-time 1800
-set-option -g history-limit 10000
+set-option -g history-limit 1000000
 
 # vi-style controls for copy mode
 setw -g mode-keys vi
@@ -18,7 +18,7 @@ set -g status-justify centre
 
 # This is so that each environment gets PATH and the like (plus the defaults
 # from tmux) from the invoking shell, and NOT from the global tmux environment.
-set-option -g update-environment "PATH LESS GEM_PATH GEM_HOME DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
+set-option -g update-environment "PATH LESS GEM_PATH GEM_HOME DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY GOPATH"
 
 bind-key C-r respawn-pane
 
